tests/sksl/errors/ReservedNameEnum.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'enum'
1 error
